fix identity service and add server to frontend for testing